Fix CSS demos being out of place when resizing browser window

--- a/css/custom.css
+++ b/css/custom.css
@@ -200,7 +200,8 @@ section.present .scene {
   background: black;
   top: 210px;
   position: absolute;
-  left: 330px;
+  left: 50%;
+  margin-left: -124px;
   padding-top: 12px;
 }
 
